# pa199

./: .gitignore  CMakeLists.txt  CMakeSettings.json  INSTALL.md  imgui.ini  vcpkg.json
cmake/: courses.cmake  modules.cmake  utils.cmake
courses/PA199/: CMakeLists.txt  depends.cmake
courses/PA199/project/: Brick.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Physics.hpp  README.md  RenderObject.hpp  application.cpp  application.hpp  main.cpp  some_game_file.cpp
courses/PA199/project/PetrMath/: AxisAngle.cpp  AxisAngle.hpp  CMakeLists.txt  Matrix.cpp  Matrix.hpp  PetrMath.cpp  PetrMath.hpp  PolarCoordinates.cpp  PolarCoordinates.hpp  Quaternion.cpp  Quaternion.hpp  Vector.cpp  Vector.hpp
courses/PA199/project/data/shaders/: line.frag  line.vert  sample.frag  sample.vert
courses/PA199/project/some_my_library_dir/: CMakeLists.txt  some_library_file.cpp  some_library_file.hpp
courses/PA199/project/test/: CMakeLists.txt  some_test.cpp
ext/: install.txt
framework/core/: CMakeLists.txt  depends.cmake
framework/core/include/: code_utils.h  configuration.h  iapplication.h  manager.h
framework/core/src/: configuration.cpp  iapplication.cpp  manager.cpp
